--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 
 # production
 /build
+/dist
 
 # misc
 .DS_Store
@@ -24,3 +25,5 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 src/image/1.gif
+
+.vercel
