--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,9 @@ VITE_SUPABASE_URL=
 VITE_SUPABASE_ANON_KEY=
 
 # Note: For Vite projects, environment variables must be prefixed with VITE_
+
+
+# Google AI Studio Configuration
+# Get your API key from https://makersuite.google.com/app/apikey
+# This is a free API with generous usage limits
+VITE_GOOGLE_AI_API_KEY=
