--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.9.0",
     "bootstrap-icons": "^1.11.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "nodemailer": "^6.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
@@ -18,13 +23,16 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
+    "concurrently": "^9.1.2",
     "vite": "^5.1.4"
   },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "vite test"
+    "test": "vite test",
+    "email-server": "node server/emailServer.cjs",
+    "dev-with-email": "concurrently \"npm run dev\" \"npm run email-server\""
   },
   "eslintConfig": {
     "extends": [
