--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,13 @@ VITE_SUPABASE_ANON_KEY=
 # Get your API key from https://makersuite.google.com/app/apikey
 # This is a free API with generous usage limits
 VITE_GOOGLE_AI_API_KEY=
+
+# Email SMTP Configuration
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_SECURE=false
+SMTP_USER=
+SMTP_PASS=
+SMTP_FROM_NAME=
+SMTP_FROM_EMAIL=
+CONTACT_FORM_TO_EMAIL=
