--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,9 @@ SMTP_PASS=
 SMTP_FROM_NAME=
 SMTP_FROM_EMAIL=
 CONTACT_FORM_TO_EMAIL=
+
+# PayPal Configuration
+# For sandbox testing, use sandbox client ID
+# For production, use live client ID
+# Get your client ID from https://developer.paypal.com/
+VITE_PAYPAL_CLIENT_ID=
